--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1000;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(237, 243, 247, 0.7);
+
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
