--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@
 
 }
 
+.sidebar {
+  background-color: #b7d3e7;
+  width: 150px;
+}
+
+.tr {
+  background-color: #5d97e9;
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
